<resources>
    <string name="app_name">Track My Kid</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_map">View kid on Map</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_location">Edit Location</string>
    <string name="nav_school">About School</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_contact">Contact Us</string>
    <string name="nav_editProfile">Profile</string>
    <string name="nav_changePassword">Change Password</string>
    <string name="nav_logout">Log Out</string>


    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>View Kid</item>
        <item>Profile</item>
        <item>Edit Location</item>
        <item>Settings</item>
        <item>Contact Us</item>
        <item>Change Password</item>
        <item>Log out</item>
    </string-array>

    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>

    <string name="activity_image_trans">activity_image_transition</string>
    <string name="activity_text_trans">activity_text_transition</string>
    <string name="activity_mixed_trans">activity_mixed_transition</string>
    <string name="fragment_image_trans">fragment_image_transition</string>

    <string name="error_general">Server request error</string>

    <string name="settings_url">Server</string>
    <string name="settings_email">Username</string>
    <string name="settings_password">Password</string>
    <string name="app_login">Login</string>
    <string name="app_loading">Hang on a second! Signing you in...</string>
    <string name="app_loadingSignup">Hang on a second! Signing you up...</string>
    <string name="app_loadingChangePassword">Hang on a second! Changing Password...</string>

    <string name="user_kn">kn</string>
    <string name="user_kmh">km/h</string>
    <string name="user_mph">mph</string>

    <string name="position_time">Time</string>
    <string name="position_latitude">Latitude</string>
    <string name="position_longitude">Longitude</string>
    <string name="position_speed">Speed</string>
    <string name="position_altitude">Altitude</string>
    <string name="position_course">Course</string>

    <string name="signUp_parentName">Parent\'s Name</string>
    <string name="signUp_usernameEmail">Login Username</string>
    <string name="signUp_password">Password</string>
    <string name="signUp_confirmPassword">Confirm Password </string>
    <string name="signUp_vanNumber">School Van Vehicle Number</string>
    <string name="signUp_parentMobile">Parent\'s Mobile Number</string>
    <string name="singup_app_loading">Hang on a second! Signing you up...</string>
    <string name="app_signup">Signup</string>

    <string name="devices_title">Devices</string>
    <string name="send_command_title">Send command</string>
    <string name="settings_title">Settings</string>
    <string name="logout_title">Logout</string>
    <string name="changePassword_title">Change Password</string>
    <string name="profile_title">View Profile</string>

    <string name="changepassword_oldPassword">Old Password</string>
    <string name="changepassword_newPassword">New Password</string>
    <string name="changepassword_newPasswordConfirm">Confirm New Password</string>
    <string name="changepassword_btn">Change Password</string>
    <string name="changepassword_userName">User Name / Email</string>

    <string name="address_profile">Address</string>
    <string name="email_profile">E-mail Address</string>
    <string name="userName_profile">User Name</string>
    <string name="kidName_profile">Kid\s Name</string>
    <string name="kidBirthday_profile">Kids\'s Birthday</string>
    <string name="driverName_profile">Driver\'s Name</string>
    <string name="driverContact_profile">Driver\'s Mobile Number</string>
    <string name="saveData_profile">Save changes</string>
    <string name="kidSchoolProfile">Kid\'s School</string>

    <string name="savePickUpLocation">Save Kid\'s Pickup Location</string>
    <string name="saveDropOffLocation">Save Kid\'s Dropoff Location</string>
    <string name="saveSchoolLocation">Save Kid\'s School Location</string>
    <string name="locationHint">Tap on the map to select a location</string>

    <string name="dreamSquadContact">+94 113 631 531</string>
    <string name="dreamSquadMail">www.dreamsquadgroup.com</string>
    <string name="dreamSquadAddress">No 101A/2, Heenatikumbura, Thalangama North, Baththaramulla 10120, Sri Lanka</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="notification_channel_id">default</string>

    //Coppied from Github Traccar Manager
    <string name="label_server">Server</string>
    <string name="label_info">This screen will be shown only once. After you click the button, server address will be saved in preferences. To change it, clear app data from application manager.</string>
    <string name="button_start">Start</string>
    <string name="file_browser">File Browser</string>
    <string name="notification_channel">Default</string>
    <string name="title_activity_maps">Map</string>

    <string name="pickup_location_saved">Pickup location saved</string>
    <string name="dropoff_location_saved">Dropoff location saved</string>

</resources>
